--- a/templates/base.html
+++ b/templates/base.html
@@ -94,8 +94,9 @@
                 <li><a href="{% url 'account_logout' %}">Logout</a></li>
                 {% endif %}
             </ul>
-            <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons" 
-                aria-labelledby="navigation-menu">menu</i></a>
+            <a href="#" data-activates="mobile-demo" class="button-collapse right">
+                <i class="material-icons">menu</i>
+            </a>
         </div>
     </nav>
     
