Change description for aria-labels in files HTML

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -52,13 +52,14 @@
             <div class="input-field col s12">
               <p>
                 Please contact
-                <a href="https://github.com/satogako/list-of-links" target="_blank">me</a>
+                <a href="https://github.com/satogako/list-of-links" target="_blank" 
+                  aria-label="Go to the page github.com/satogako/list-of-links">me</a>
                 if you have forgotten your password.
               </p>
             </div>
           </div>
           <button class="primaryAction waves-effect waves-light btn btn-color" type="submit"
-            aria-label="submit and return on the All Resources page">{% trans "Sign In" %}</button>
+            aria-label="Clik Login and return on the All Resources page">{% trans "Sign In" %}</button>
         </form>
       </div>
     </div>
