--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -22,7 +22,7 @@
             {% endif %}
             <a href="{% url 'all_resources' %}" class="waves-effect waves-light btn btn-color">No</a>
             <button type="submit" class="waves-effect waves-light btn red darken-1" 
-              aria-label="submit and return on the All Resources page">{% trans 'Sign Out' %}</button>
+              aria-label="Click Logout and return on the All Resources page">{% trans 'Sign Out' %}</button>
           </form>
 
       </div>
