--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -55,7 +55,7 @@
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
           <button type="submit" class="waves-effect waves-light btn btn-color"
-            aria-label="submit and return on the All Resources page">{% trans "Sign Up" %} &raquo;</button>
+            aria-label="Click signup and return on the All Resources page">{% trans "Sign Up" %} &raquo;</button>
         </form>
 
       </div>
