--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,7 @@
                 </li>
                 {% else %}
                 <li><a class="dropdown-button" href="#!" data-activates="dropdown1" 
-                        aria-labelledby="drop-down-button">{{ user.username }}<i class="material-icons right">arrow_drop_down</i>
+                        aria-labelledby="dropdown1">{{ user.username }}<i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
                 {% endif %}
