--- a/templates/approval_comments.html
+++ b/templates/approval_comments.html
@@ -43,7 +43,7 @@
                                                 <td>
                                                     <input type="checkbox" name="approve[]" value="{{comment.id}}"
                                                         id="{{comment.id}}" class="filled-in" checked="checked"
-                                                        aria-label="Mark the comment" />
+                                                        aria-label="Mark the comment" >
                                                     <label for="{{comment.id}}">
                                                 </td>
                                                 <td>{{ comment.name }}</td>
@@ -56,7 +56,7 @@
                                     </table>
                                     <br>
                                     <button type="submit" class="waves-effect waves-light btn btn-color"
-                                        aria-labelledby="Approve-button">Approve</button>
+                                        aria-label="Submit">Approve</button>
                                     {% else %}
                                     <br>
                                     <p class="text-placeholder">There are no comments for approval</p>
@@ -92,7 +92,7 @@
                                                 <td>
                                                     <input type="checkbox" name="delete[]" value="{{comment.id}}"
                                                         id="{{comment.id}}" class="filled-in"
-                                                        aria-label="Mark the comment" />
+                                                        aria-label="Mark the comment" >
                                                     <label for="{{comment.id}}">
                                                 </td>
                                                 <td>{{ comment.name }}</td>
@@ -105,7 +105,7 @@
                                     </table>
                                     <br>
                                     <button type="submit" class="waves-effect waves-light btn red darken-1"
-                                        aria-labelledby="delete-button">Delete</button>
+                                        aria-label="submit">Delete</button>
                                     {% else %}
                                     <br>
                                     <p class="text-placeholder">There are no approved comments yet</p>
