--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -46,7 +46,7 @@
             </p>
           </div>
           {% if redirect_field_value %}
-          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
           {% endif %}
           <div class="row">
             <div class="input-field col s12">
