--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -52,7 +52,7 @@
             </div>
           </div>
           {% if redirect_field_value %}
-          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" >
           {% endif %}
           <button type="submit" class="waves-effect waves-light btn btn-color"
             aria-label="Click signup and return on the All Resources page">{% trans "Sign Up" %} &raquo;</button>
