Add aria-label to link in the footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -139,13 +139,13 @@
     <!--footer-->
         <footer class="page-footer">
             <div class="footer-copyright">
-              <div class="container">
-                © 2023
-              <a class="grey-text text-lighten-4 right" href="https://github.com/satogako/list-of-links" 
-                rel="nofollow" target="_blank">
-                <i class="fa-brands fa-github-alt fa-2xl"></i>
-              </a>
-              </div>
+                <div class="container">
+                        © 2023
+                    <a class="grey-text text-lighten-4 right" href="https://github.com/satogako/list-of-links" 
+                        rel="nofollow" target="_blank" aria-label="Go to the List of Links on Github ">
+                        <i class="fa-brands fa-github-alt fa-2xl"></i>
+                    </a>
+                </div>
             </div>
           </footer>
 
