Fix skipped headings level

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -15,7 +15,7 @@
   <div class="col s12 l8 offset-l2">
     <div class="card">
       <div class="card-content">
-        <h5>{% trans "Sign In" %}</h5>
+        <h2 class="card-title"><strong>{% trans "Sign In" %}</strong></h2>
 
         <p>
           {% blocktrans %}If you have not created an account yet, then please
