--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -11,7 +11,7 @@
   <div class="col s12 l8 offset-l2">
       <div class="card">
         <div class="card-content">
-          <h5>{% trans "Sign Out" %}</h5>
+          <h2 class="card-title"><strong>{% trans "Sign Out" %}</strong></h2>
 
           <p>{% trans 'Are you sure you want to sign out?' %}</p>
 
