--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 <a class="waves-effect waves-light btn btn-color" href="{% url 'resource_comments' data.slug %}">
                     Add You Comment
                 </a>
-                <h6 class="center-align">Comments:</h6>
+                <h3 class="center-align font-size-m">Comments:</h3>
                                 
                 <!--List of comments-->
                 {% for comment in data.comments.all %}
