--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -16,7 +16,7 @@
     <div class="card">
       <div class="card-content">
 
-        <h5>{% trans "Sign Up" %}</h5>
+        <h2 class="card-title"><strong>{% trans "Sign Up" %}</strong></h2>
 
         <p>{% blocktrans %}Already have an account? Then please 
           <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
