Add href to the modal-about link in the base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     </ul>
     <nav>
         <div class="nav-wrapper">
-            <a data-target="modal-about" class="modal-trigger hand-cursor">
+            <a data-target="modal-about" class="modal-trigger hand-cursor" href="#about-link-of-links">
                 <img class="responsive-img" src="{% static 'images/LinkOfLinks_logo.jpg' %}" alt="Logo image List Of List">
             </a>
             <ul class="right hide-on-med-and-down">
