Remove whitespace in python files

--- a/templates/resource_details.htm
+++ b/templates/resource_details.htm
@@ -75,7 +75,7 @@
                                                 <textarea name="comment_field" id="icon_prefix2"
                                                     class="materialize-textarea">
                                                     </textarea>
-                                                <label for="icon_prefix2">Posting as: {{ post.author }}</label>
+                                                <label for="icon_prefix2">Posting as: {{ user.username }}</label>
                                             </div>
                                             <button type="submit" class="waves-effect waves-light btn btn-color right">
                                                 Submit
