Rename logo image file

--- a/templates/approval_comments.html
+++ b/templates/approval_comments.html
@@ -8,7 +8,7 @@
     <div class="col s12 l8 offset-l2">
         <div class="card">
             <div class="card-image ">
-                <img src="{% static 'images/LinkOfLinks_logo.jpg' %}" alt="Logo image List of Links">
+                <img src="{% static 'images/list_of_links_logo.jpg' %}" alt="Logo image List of Links">
             </div>
             <div class="card-content">
                 <!--Header-->
