--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     <nav>
         <div class="nav-wrapper">
             <a data-target="modal-about" class="modal-trigger hand-cursor" href="#about-link-of-links">
-                <img class="responsive-img" src="{% static 'images/LinkOfLinks_logo.jpg' %}" alt="Logo image List Of List">
+                <img class="responsive-img" src="{% static 'images/list_of_links_logo.jpg' %}" alt="Logo image List Of List">
             </a>
             <ul class="right hide-on-med-and-down">
                 <li>
