--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     
     <link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
